Migrate common module to Aluminium Step 1
JIRA: TRNSPRTPCE-292 TRNSPRTPCE-297
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>
Change-Id: I9d264136b83d1267cee4e59520b0a682d4258c24